mVersion: header: Fix: mobilemenu's hamburger shifted right -&&- row-brand margin-top quirk fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -361,13 +361,15 @@ $xsBp-max= max-width = 36.9375em;  //575px */
 
 /*XXXXXXXXXXXXXXXX  Only mobile specific XXXXXXXXXXXXXXX*/
 @media only screen and (max-width: 47.9375em) {
-  .wrapper-header .wrapper-header .row.mVersion {
+  .wrapper-header .row-topmost {
     position: fixed;
     width: 100%;
     padding-left: 2%;
     padding-right: 2%; }
   .wrapper-header .component-nav, .wrapper-header .component-welcome .wrapper-socialIcon {
     display: none; }
+  .wrapper-header .container-hamburger {
+    margin-left: auto; }
 
   .wrapper-header .col-nav {
     background-color: #111111; } }
