--- a/sass/_z0_phone-default.scss
+++ b/sass/_z0_phone-default.scss
@@ -53,7 +53,6 @@ $xsBp-max= max-width = 36.9375em;  //575px */
 
 .wrapper-header .row-welcome {
 	background-color: #111;
-	@include mq("desktop-min", max) {}
 }
 
 .wrapper-header .component-welcome {
@@ -217,7 +216,7 @@ $xsBp-max= max-width = 36.9375em;  //575px */
 	//-------   row-topmost  ------------
 	.wrapper-header {
 		//for fixed top-row header (Title and hamburger-row)
-		.wrapper-header .row.mVersion {
+		.row-topmost {
 			position: fixed;
 			width: 100%;
 			padding-left: 2%;
@@ -227,6 +226,7 @@ $xsBp-max= max-width = 36.9375em;  //575px */
 		.component-nav, .component-welcome .wrapper-socialIcon { 
 			display: none;
 		}
+		.container-hamburger {margin-left: auto;}
 	}
 
 	//row-brand 
